qttools-opensource-src (5.0.2-4) UNRELEASED; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update symbols files for armhf, ia64 and ppc64.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 30 Apr 2013 09:19:39 -0300

qttools-opensource-src (5.0.2-3) experimental; urgency=low

  [ Dmitry Shachnev ]
  * Use correct (and canonical) Vcs fields.

  [ Pino Toscano ]
  * debian/control: remove unused ${misc:Pre-Depends} from qttools5-dev-tools.
  * debian/control: make qttools5-dev depend on qtbase5-dev.
  * Update symbols files.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update amd64 symbols.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 28 Apr 2013 23:41:12 -0300

qttools-opensource-src (5.0.2-2) experimental; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Confirm symbols files for i386, ia64 and powerpc.

  [ Pino Toscano ]
  * Fix build on Hurd; patch hurd-path_max.diff.
  * debian/control: remove unused ${misc:Pre-Depends} from qdbus-qt5,
    qttools5-dev, qttools5-private-dev, qttools5-dbg and qttools5-examples-dbg.
  * debian/qttools5-private-dev.install: use wildcards instead of the version.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 22 Apr 2013 18:10:15 -0300

qttools-opensource-src (5.0.2-1) experimental; urgency=low

  * Initial release. (Closes: #697509)

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 20 Apr 2013 23:25:12 -0300